[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-pay-crewai-analyzer"
version = "1.0.0"
description = "Google Pay transaction analyzer with CrewAI multi-agent system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["google-pay", "crewai", "financial-analysis", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "crewai[google-genai]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/chiragvispute/GooglePay_Analysis"
Repository = "https://github.com/chiragvispute/GooglePay_Analysis.git"
Issues = "https://github.com/chiragvispute/GooglePay_Analysis/issues"

[project.scripts]
gpay-analyzer = "crewai_app:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.hatch.version]
path = "crewai_app.py"

[tool.hatch.build.targets.wheel]
packages = ["crewai_app.py"]